#10 | Created member resource along with view model and exceptions, updating non null fields on PUT